# claude-md

./: .gitignore  Claude.md  README.md  TERMINAL_OPTIMIZATION.md  pyproject.toml
claude/: Claude.md
claude/skills/add-google-auth/: SKILL.md
claude/skills/blog-writer/: SKILL.md  STYLE_GUIDE.md
claude/skills/deploy-cloudflare/: SKILL.md
claude/skills/deployer/: SKILL.md
claude/skills/frontend-tester/: SKILL.md
claude/skills/gemini-image-generator/: SKILL.md
claude/skills/linkedin-post-generator/: SKILL.md
claude/skills/pr-creator/: SKILL.md
copilot/: AI-ASSISTED-CODING-COMPLETE-GUIDE.md  AI-Assisted-Coding-Demo-Presentation.md  AI-Assisted-Coding-Presentation.md  ARTIFACTS_SUMMARY.md  DEMO-SAMPLE-CODE.md  PRESENTATION-README.md  PRESENTATION_SETUP.md  PRESENTER-GUIDE.md  QUICK_START.md  README.md  WHAT-YOU-HAVE.md  copilot-instructions.md
copilot/agents/: code-reviewer.agent.md  kubernetes-expert.agent.md  pr-description-generator.agent.md  python-coder.agent.md  python-tester.agent.md  readme-generator.agent.md  task-planner.agent.md
copilot/prompts/: add-comprehensive-logging.prompt.md  generate-unit-tests.prompt.md  optimize-pyspark.prompt.md  refactor-for-testability.prompt.md  security-review.prompt.md
presentations/: design-systems-component-libraries-building-blocks.md  design-systems-component-libraries-building-blocks.pptx  unleash-your-inner-presenter.md  web-development-trends-2026-navigating-the-future.md
skills/blog-post-generator/: SKILL.md
skills/marp-presentation-generator/: SKILL.md
skills/screenshot-capture/: SKILL.md
(+18 files in other folders)
